# opencv-4.3.0

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
cmake/: OpenCVDownload.cmake  OpenCVUtils.cmake
modules/core/: CMakeLists.txt
modules/gapi/cmake/: DownloadADE.cmake  standalone.cmake
modules/highgui/src/: window_w32.cpp
modules/objc/generator/templates/: cmakelists.template
modules/objc/test/: cmakelists.template
modules/ts/: CMakeLists.txt
modules/videoio/cmake/: init.cmake  plugin.cmake  plugin_standalone.cmake
